# Rust-Engine

./: .env  .gitignore  Cargo.toml
engine/app/: mod.rs
src/: main.rs
src/app/: api_doc.rs  mod.rs
src/app/config/: aws-s3.rs  supabase.rs
src/app/controllers/: mod.rs  oauth.rs  oauth_controller.rs  rate_controller.rs  user_controller.rs
src/app/routes/: account_rotue.rs  auth_route.rs  mod.rs  oauth_route.rs  rate_route.rs
src/app/services/: crypto.rs
src/app/utils/: date.rs  env.rs  error.rs  file.rs  json.rs  mod.rs
updated/: Cargo.toml
updated/src/: main.rs
updated/src/app/controllers/: user.rs
updated/src/app/models/: user.rs
updated/src/app/routes/: mod.rs
updated/src/config/: mod.rs
updated/src/controllers/: user.rs
updated/src/middlewares/: auth.rs
updated/src/models/: user.rs
