[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.7"
bcrypt = "0.12"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
utoipa = "3.5.0" # Latest stable version
utoipa-swagger-ui = { version = "7.1.1-rc.0" } 
rustc-serialize = "0.3"
iron = "0.6"
supabase = "0.0.0"
aws-sdk-s3 = "1.5.10"
aws-config = "1.5.10"
colored = "2.2.0"
