[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.7"
bcrypt = "0.12"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
colored = "2.2.0"
serde_json = "1"
postgrest = "1.6.0"
log = "0.4"
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
utoipa = "5"
cargo-watch = "8.5.3"
