[dependencies]
actix-web = "4"
actix-web-httpauth = "0.7"
bcrypt = "0.12"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "3.4", features = ["actix-web"] }
utoipa-swagger-ui = "3.4"